Fix: menu button position on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -32,7 +32,7 @@
     order: 2;
     display: flex;
     .trending-container {
-      min-width: 480px;
+      // min-width: 480px;
       text-align: start;
       flex-grow: 1.5;
       .trending-red {
@@ -289,9 +289,9 @@
       min-width: 1000px;
       max-width: 1700px;
       margin: auto;
-    }
-    .trending-container {
-      min-width: 400px;
+      .trending-container {
+        min-width: 480px;
+      }
     }
     .header-top-section {
       display: flex;
