--- a/src/app/components/login-button/login-button.component.scss
+++ b/src/app/components/login-button/login-button.component.scss
@@ -34,9 +34,9 @@
   }
 }
 
-.font-initial {
-  // font-family: Arial, sans-serif;
-}
+// .font-initial {
+//   // font-family: Arial, sans-serif;
+// }
 
 @include from(dt) {
   .loginregister-container {
